@@ -6,5 +6,5 @@ sudo chmod a+x *.sh
 sudo chmod a+x BeerPi_jar/*.sh
 sudo xset s off
 
-sudo java -jar ./BeerPi_jar/BeerPi.jar -ea
+sudo java -jar --module-path /usr/share/openjfx/lib --add-modules javafx.controls ./BeerPi_jar/BeerPi.jar -ea
 read -p "Please press enter to continue..." nothing 
